--- a/bindgame/game.html
+++ b/bindgame/game.html
@@ -34,7 +34,6 @@
 			o.collide=function(ball) {
 				if(ball.y+ball.image.height>o.y) {
 					if(ball.x>o.x && ball.x<o.x+o.image.width){
-						log('carsh')
 						return true
 					}
 				}
@@ -79,7 +78,6 @@
 		var rectIntersects = function (a,b) {
 			if(b.y > a.y && b.y < a.y + a.image.height ) {
 				if(b.x > a.x && b.x < a.x + a.image.width ){
-					log('carsh')
 					return true
 				}
 			}
@@ -99,13 +97,23 @@
 			o.kill = function() {
 				o.alive = false
 			}
-			o.collide=function(ball) {
-				if (rectIntersects(o,ball)||rectIntersects(ball,o)) {
-					return true
+			o.collide = function(ball) {
+				if(o.alive) {
+					if (rectIntersects(o,ball)||rectIntersects(ball,o) ) {
+						return true
+					}
 				}
 			}
 			return o
 		}
+		var blocks = [] 
+		for (var i = 0; i < 3; i++) {
+			var b = Block()
+			b.x = i * 300
+			b.y = 200
+			blocks.push(b)
+		}
+		
 		var Game=function() {
 			var g={
 				actions: {},
@@ -132,7 +140,6 @@
 			g.registerAction=function(key,callback){
 				g.actions[key]=callback
 			}
-
             //timer
             setInterval(function() {
 				//update event
@@ -168,19 +175,31 @@
 			//update
 			game.update=function() {
 				ball.move()
-				//crashs
+				//板子和球的相撞
 				if(bond.collide(ball)){
 					ball.speedY=-ball.speedY
 				}
-				if (block.collide(ball)) {
-					block.kill()
+				//球和砖的相撞
+				for (var i = 0; i < blocks.length; i++) {
+					var block = blocks[i]
+					if (block.collide(ball)) {
+						block.kill()
+					}
+
 				}
 			}
 			//draw
 			game.draw=function() {
 				game.drawImage(bond)
 				game.drawImage(ball)
-				game.drawImage(block)
+
+				for (var i = 0; i < blocks.length; i++) {
+					var block = blocks[i]
+					if(block.alive) {
+						game.drawImage(block)
+					}
+				}
+				
 			}
 		}
 		__main()
