--- a/bindgame/game.html
+++ b/bindgame/game.html
@@ -7,6 +7,12 @@
 		border: 1px black solid;
 	}
 </style>
+
+<script src="game.js"></script>
+<script src="block.js"></script>
+<script src="bond.js"></script>
+<script src="ball.js"></script>
+
 </head>
 <body>
 	<canvas id="id-canvas" width="800" height="800"></canvas>
@@ -17,64 +23,6 @@
 			img.src=path
 			return img;
 		}
-		var Bond=function(){
-			var image=imageFrompPath('images/bond.png')
-			var o={
-				image: image,
-				x:  200,
-				y: 600,
-				speed:  10,
-			}
-			o.moveLeft=function(){
-				this.x-=this.speed
-			}
-			o.moveRight=function(){
-				this.x+=this.speed
-			}
-			o.collide=function(ball) {
-				if(ball.y+ball.image.height>o.y) {
-					if(ball.x>o.x && ball.x<o.x+o.image.width){
-						return true
-					}
-				}
-
-
-			}
-			return o
-		}
-		var Ball=function(){
-			var image=imageFrompPath('images/qiu.png')
-			var o={
-				image: image,
-				x:  200,
-				y: 600,
-				speedX: 5,
-				speedY:5, 
-				fired: false,
-			}
-			o.move=function(){			
-				if(o.fired) {
-					if(o.x<0||o.x+o.image.width>800)
-					{
-						o.speedX=-o.speedX
-					}
-					if(o.y<0||o.y+o.image.height>800)
-					{
-						o.speedY=-o.speedY
-					}
-
-					o.x+=o.speedX
-					o.y+=o.speedY
-				}
-
-			}
-			o.fire=function() {
-				o.fired=true
-			}
-
-
-			return o
-		}
 		var rectIntersects = function (a,b) {
 			if(b.y > a.y && b.y < a.y + a.image.height ) {
 				if(b.x > a.x && b.x < a.x + a.image.width ){
@@ -83,86 +31,23 @@
 			}
 			return false
 		}
-		var Block=function(){
-			var image=imageFrompPath('images/block.png')
-
-			var o={
-				image: image,
-				x: 100,
-				y: 100,
-				width: 47,
-				height: 43,
-				alive: true
-			}
-			o.kill = function() {
-				o.alive = false
-			}
-			o.collide = function(ball) {
-				if(o.alive) {
-					if (rectIntersects(o,ball)||rectIntersects(ball,o) ) {
-						return true
-					}
-				}
-			}
-			return o
-		}
-		var blocks = [] 
-		for (var i = 0; i < 3; i++) {
-			var b = Block()
-			b.x = i * 300
-			b.y = 200
-			blocks.push(b)
-		}
 		
-		var Game=function() {
-			var g={
-				actions: {},
-				keydowns: {},
-			}
-			var canvas=document.querySelector('#id-canvas')
-			var context=canvas.getContext('2d')
-			g.canvas=canvas
-			g.context=context
-			g.drawImage=function(Image) {
-				g.context.drawImage(Image.image,Image.x,Image.y)
-			}
+		var blocks = [] 
+		for (var i = 0; i < 6; i++) {
+			var b = Block()
+			blocks.push(b)
+			b.x = i * 150
+			b.y = 200
 
-			//event
-			window.addEventListener('keydown',function(event){
-				g.keydowns[event.key]=true
-			})
-			window.addEventListener('keyup',function(event){
-				g.keydowns[event.key]=false
-			})
-			g.registerAction=function(key,callback){
-				g.actions[key]=callback
-			}
-			g.registerAction=function(key,callback){
-				g.actions[key]=callback
-			}
-            //timer
-            setInterval(function() {
-				//update event
-				var actions=Object.keys(g.actions)
-				for (var i = 0; i <actions.length; i++) {
-					var key=actions[i]
-					if(g.keydowns[key])
-						g.actions[key]()
-				}
-				//clare
-				context.clearRect(0,0,canvas.width,canvas.height)
-				g.update()
-				//draw
-				g.draw()
-			}, 10)
-            return g;
-        }
+		}
+		var pausd = false
+		
         var __main=function() {
-        	var game = Game()
-
+        	var game = Game(10)
         	var bond = Bond()	
         	var ball = Ball()	
         	var  block = Block()
+        	
         	game.registerAction('a',function() {
         		bond.moveLeft()
         	})
@@ -172,8 +57,12 @@
         	game.registerAction('f',function() {
         		ball.fire()
         	})
+
 			//update
 			game.update=function() {
+				if (pausd) {
+					return 
+				}
 				ball.move()
 				//板子和球的相撞
 				if(bond.collide(ball)){
@@ -185,21 +74,19 @@
 					if (block.collide(ball)) {
 						block.kill()
 					}
-
 				}
 			}
 			//draw
+
 			game.draw=function() {
 				game.drawImage(bond)
 				game.drawImage(ball)
-
 				for (var i = 0; i < blocks.length; i++) {
 					var block = blocks[i]
 					if(block.alive) {
 						game.drawImage(block)
 					}
 				}
-				
 			}
 		}
 		__main()
