--- a/bindgame/game.html
+++ b/bindgame/game.html
@@ -9,6 +9,8 @@
 </style>
 
 <script src="game.js"></script>
+<script src="level.js"></script>
+<script src="until.js"></script>
 <script src="block.js"></script>
 <script src="bond.js"></script>
 <script src="ball.js"></script>
@@ -18,36 +20,31 @@
 	<canvas id="id-canvas" width="800" height="800"></canvas>
 	<script type="text/javascript">
 		var log=console.log.bind(console)
-		var imageFrompPath=function(path){
-			var img=new Image();
-			img.src=path
-			return img;
-		}
-		var rectIntersects = function (a,b) {
-			if(b.y > a.y && b.y < a.y + a.image.height ) {
-				if(b.x > a.x && b.x < a.x + a.image.width ){
-					return true
-				}
-			}
-			return false
-		}
-		
-		var blocks = [] 
-		for (var i = 0; i < 6; i++) {
-			var b = Block()
-			blocks.push(b)
-			b.x = i * 150
-			b.y = 200
 
+
+		var loadlevel = function(n) {
+			var n = n-1
+			var level = levels[n]
+			var blocks = []
+			for (var i = 0; i < level.length; i++) {
+				var p = level[i]
+				log(p)
+				var b =  Block(p)
+				blocks.push(b)
+			}
+			return blocks
 		}
-		var pausd = false
 		
-        var __main=function() {
-        	var game = Game(10)
-        	var bond = Bond()	
-        	var ball = Ball()	
-        	var  block = Block()
-        	
+		
+		
+		var __main=function() {
+			var game = Game(10)
+			var bond = Bond()	
+			var ball = Ball()	
+			var blocks = loadlevel(1)
+        	var pausd = false//控制暂停的参数
+
+
         	game.registerAction('a',function() {
         		bond.moveLeft()
         	})
@@ -56,6 +53,15 @@
         	})
         	game.registerAction('f',function() {
         		ball.fire()
+        	})
+        	window.addEventListener('keyup',function(event){
+        		var key =  event.key
+        		if(key == 'p') {
+        			pausd = !pausd
+        		}
+        		else if ('1234567'.includes(key) ) {
+        			blocks = loadlevel(Number(key))
+        		}
         	})
 
 			//update
