--- a/bindgame/game.html
+++ b/bindgame/game.html
@@ -21,6 +21,9 @@
 	</canvas>
 	<hr>
 	<input id="id-input-speed" type="range" value="1">
+	<div class="">
+		<textarea id="id-input-log" rows = "20" cols = "120"> </textarea>
+	</div>
 	<script src="main.js"></script>
 </body>
 </html>
